refactor: CommonException 변경